{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 18,
  "lineage": "31e2b4ff-c8c5-5fcd-5200-44005ff561e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:542157663317:internet-gateway/igw-05a6a79f18c04af7b",
            "id": "igw-05a6a79f18c04af7b",
            "owner_id": "542157663317",
            "vpc_id": "vpc-00c4f0442464de68b"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:542157663317:route-table/rtb-0b7da211f43cd24cf",
            "id": "rtb-0b7da211f43cd24cf",
            "owner_id": "542157663317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a6a79f18c04af7b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-00c4f0442464de68b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_IGW",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_route_association_eks_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c390973dac33bc7a",
            "route_table_id": "rtb-0b7da211f43cd24cf",
            "subnet_id": "subnet-00d0295cbff2fced6"
          },
          "dependencies": [
            "aws_internet_gateway.eks_IGW",
            "aws_route_table.eks_route_table",
            "aws_subnet.eks_subnet_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_route_association_eks_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f33b071849debb8",
            "route_table_id": "rtb-0b7da211f43cd24cf",
            "subnet_id": "subnet-03577544607e13e69"
          },
          "dependencies": [
            "aws_internet_gateway.eks_IGW",
            "aws_route_table.eks_route_table",
            "aws_subnet.eks_subnet_2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:542157663317:security-group/sg-06295136716c71999",
            "description": "Allow TLS inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06295136716c71999",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks_security_group",
            "name_prefix": "",
            "owner_id": "542157663317",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c4f0442464de68b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:542157663317:subnet/subnet-00d0295cbff2fced6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00d0295cbff2fced6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "542157663317",
            "tags": {
              "Name": "eks_subnet-ap-south-1a",
              "kubernetes.io/cluster/aws_eks_cluster.eks_cluster_demo.name": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_subnet-ap-south-1a",
              "kubernetes.io/cluster/aws_eks_cluster.eks_cluster_demo.name": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00c4f0442464de68b"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:542157663317:subnet/subnet-03577544607e13e69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03577544607e13e69",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "542157663317",
            "tags": {
              "Name": "eks_subnet-ap-south-2a",
              "kubernetes.io/cluster/aws_eks_cluster.eks_cluster_demo.name": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_subnet-ap-south-2a",
              "kubernetes.io/cluster/aws_eks_cluster.eks_cluster_demo.name": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00c4f0442464de68b"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:542157663317:vpc/vpc-00c4f0442464de68b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03baa688223f36efc",
            "default_route_table_id": "rtb-0747df19f5527fc81",
            "default_security_group_id": "sg-094fa6d4060bee2a2",
            "dhcp_options_id": "dopt-050db86e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00c4f0442464de68b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0747df19f5527fc81",
            "owner_id": "542157663317",
            "tags": {
              "Name": "terraform_eks_cluster_demo",
              "kubernetes.io/cluster/aws_eks_cluster.eks_cluster_demo.name": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terraform_eks_cluster_demo",
              "kubernetes.io/cluster/aws_eks_cluster.eks_cluster_demo.name": "shared",
              "kubernetes.io/role/elb": "1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}